--- a/index.html
+++ b/index.html
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dronix - Venta y Mantenimiento de Drones</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&display=swap" rel="stylesheet">
   <style>
+    /* Estilos generales */
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
       background-color: #1e293b;
       color: white;
     }
+
     header {
       background-color: #0f172a;
       padding: 20px;
       text-align: center;
     }
+
     header img {
       width: 150px;
     }
+
     h1 {
       font-family: 'Orbitron', sans-serif;
       font-size: 2.5em;
       margin-top: 10px;
     }
+
     .seccion {
       padding: 40px 20px;
       max-width: 1000px;
       margin: auto;
     }
+
     .titulo {
       color: #f97316;
       font-family: 'Orbitron', sans-serif;
       font-size: 2em;
       margin-bottom: 10px;
     }
+
+    /* Estilo para los botones */
     .boton-contacto {
       background-color: #f97316;
       border: none;
@@ -46,6 +55,8 @@
       border-radius: 10px;
       text-decoration: none;
     }
+
+    /* Estilo para el footer */
     footer {
       background-color: #0f172a;
       text-align: center;
@@ -53,20 +64,35 @@
       font-size: 0.9em;
       color: #ccc;
     }
+
+    /* Estilos de la sección de redes sociales */
+    .contacto img {
+      width: 50px;
+      height: 50px;
+    }
+
+    .contacto h3 {
+      font-size: 1.5em;
+      color: #f97316;
+    }
   </style>
 </head>
+
 <body>
+  <!-- Header -->
   <header>
     <img src="logo_dronix.png" alt="Logo Dronix">
     <h1>Dronix</h1>
     <p>Innovación en venta y mantenimiento de drones</p>
   </header>
 
+  <!-- Sección ¿Quiénes somos? -->
   <section class="seccion">
     <div class="titulo">¿Quiénes somos?</div>
     <p>En Dronix nos especializamos en ofrecer drones de alta calidad, así como servicios profesionales de mantenimiento y reparación. Nuestra misión es llevar la tecnología aérea a otro nivel.</p>
   </section>
 
+  <!-- Sección Servicios -->
   <section class="seccion">
     <div class="titulo">Servicios</div>
     <ul>
@@ -76,26 +102,32 @@
     </ul>
   </section>
 
+  <!-- Sección Contacto -->
   <section class="seccion">
     <div class="titulo">Contáctanos</div>
     <p>¿Tienes dudas o quieres cotizar un servicio? ¡Estamos para ayudarte!</p>
     <a href="https://wa.me/524776120900" class="boton-contacto" target="_blank">Escríbenos por WhatsApp</a>
   </section>
 
-<section class="seccion">
-  <div class="titulo">Visión y Meta</div>
-  <p><strong>Visión:</strong> Ser la empresa líder en el mercado de drones, proporcionando soluciones innovadoras y accesibles para profesionales y entusiastas. Buscamos transformar la forma en que las personas interactúan con la tecnología aérea, ofreciendo productos de calidad, servicio excepcional y un compromiso constante con la innovación.</p>
-  <p><strong>Meta:</strong> Proporcionar drones de alta calidad y servicios de mantenimiento con un enfoque en la excelencia técnica y la satisfacción del cliente. Nuestro objetivo es expandir nuestro alcance, convirtiéndonos en el proveedor principal para quienes buscan soluciones aéreas de vanguardia.</p>
-</section>
-<!-- Sección de contacto o footer -->
-<section class="contacto">
-  <h3>¡Síguenos en nuestras redes sociales!</h3>
-  <a href="https://www.instagram.com/dronix_mex/" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 50px; height: 50px;">
-  </a>
-</section>
- <footer>
+  <!-- Sección Visión y Meta -->
+  <section class="seccion">
+    <div class="titulo">Visión y Meta</div>
+    <p><strong>Visión:</strong> Ser la empresa líder en el mercado de drones, proporcionando soluciones innovadoras y accesibles para profesionales y entusiastas. Buscamos transformar la forma en que las personas interactúan con la tecnología aérea, ofreciendo productos de calidad, servicio excepcional y un compromiso constante con la innovación.</p>
+    <p><strong>Meta:</strong> Proporcionar drones de alta calidad y servicios de mantenimiento con un enfoque en la excelencia técnica y la satisfacción del cliente. Nuestro objetivo es expandir nuestro alcance, convirtiéndonos en el proveedor principal para quienes buscan soluciones aéreas de vanguardia.</p>
+  </section>
+
+  <!-- Sección Redes Sociales -->
+  <section class="contacto">
+    <h3>¡Síguenos en nuestras redes sociales!</h3>
+    <a href="https://www.instagram.com/dronix_mex/" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+    </a>
+  </section>
+
+  <!-- Footer -->
+  <footer>
     &copy; 2025 Dronix. Todos los derechos reservados.
   </footer>
 </body>
+
 </html>
