--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
     <a href="https://www.instagram.com/dronix_mex/" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
     </a>
+    </a>
+    <!-- Facebook -->
+    <a href="https://www.facebook.com/share/1A6NvFfBQo/?mibextid=wwXIfr" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
+    </a>
   </section>
 
   <!-- Footer -->
