--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     .contacto img {
       width: 50px;
       height: 50px;
+      margin: 0 10px;
     }
 
     .contacto h3 {
@@ -119,9 +120,9 @@
   <!-- Sección Redes Sociales -->
   <section class="contacto">
     <h3>¡Síguenos en nuestras redes sociales!</h3>
+    <!-- Instagram -->
     <a href="https://www.instagram.com/dronix_mex/" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
-    </a>
     </a>
     <!-- Facebook -->
     <a href="https://www.facebook.com/share/1A6NvFfBQo/?mibextid=wwXIfr" target="_blank">
