--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       font-family: 'Roboto', sans-serif;
       background: linear-gradient(to right, #1e293b, #0f172a);
       color: white;
+      scroll-behavior: smooth;
     }
 
+    /* Header */
     header {
       background-color: #0f172a;
       padding: 40px;
@@ -29,10 +31,23 @@
 
     h1 {
       font-family: 'Poppins', sans-serif;
-      font-size: 2.5em;
+      font-size: 3em;
       margin-top: 10px;
+      color: #f97316;
     }
 
+    /* Animación del encabezado */
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
+    }
+
+    /* Secciones */
     .seccion {
       padding: 40px 20px;
       max-width: 1000px;
@@ -46,10 +61,44 @@
       margin-bottom: 10px;
     }
 
+    /* Estilo para los botones */
+    .boton-contacto {
+      background-color: #f97316;
+      border: none;
+      padding: 15px 30px;
+      color: white;
+      font-size: 1.1em;
+      cursor: pointer;
+      border-radius: 10px;
+      text-decoration: none;
+      transition: all 0.3s ease;
+    }
+
+    .boton-contacto:hover {
+      background-color: #ff5c00;
+      transform: scale(1.05);
+    }
+
+    /* Estilo para el footer */
+    footer {
+      background-color: #0f172a;
+      text-align: center;
+      padding: 20px;
+      font-size: 1em;
+      color: #ccc;
+      margin-top: 40px;
+    }
+
+    /* Sección de Redes Sociales */
     .contacto img {
       width: 50px;
       height: 50px;
       margin: 0 10px;
+      transition: all 0.3s ease;
+    }
+
+    .contacto img:hover {
+      transform: scale(1.2);
     }
 
     .contacto h3 {
@@ -57,79 +106,77 @@
       color: #f97316;
     }
 
-    .boton-contacto {
-      background-color: #f97316;
-      border: none;
-      padding: 15px 30px;
-      color: white;
-      font-size: 1em;
-      cursor: pointer;
-      border-radius: 10px;
-      text-decoration: none;
-    }
-
-    footer {
-      background-color: #0f172a;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
-      color: #ccc;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-
-      to {
-        opacity: 1;
-      }
-    }
-
     @media (max-width: 768px) {
       h1 {
-        font-size: 2em;
+        font-size: 2.5em;
       }
+
       .seccion {
         padding: 20px;
+      }
+
+      footer {
+        font-size: 0.9em;
       }
     }
   </style>
 </head>
 
 <body>
+  <!-- Header -->
   <header>
     <img src="logo_dronix.png" alt="Logo Dronix">
     <h1>Dronix</h1>
     <p>Innovación en venta y mantenimiento de drones</p>
   </header>
 
+  <!-- Sección ¿Quiénes somos? -->
   <section class="seccion">
     <div class="titulo">¿Quiénes somos?</div>
     <p>En Dronix nos especializamos en ofrecer drones de alta calidad, así como servicios profesionales de mantenimiento y reparación. Nuestra misión es llevar la tecnología aérea a otro nivel.</p>
   </section>
 
+  <!-- Sección Servicios -->
   <section class="seccion">
     <div class="titulo">Servicios</div>
     <ul>
-      <li><i class="fas fa-drone"></i> Venta de drones</li>
+      <li><i class="fas fa-drone"></i> Venta de drones profesionales y recreativos</li>
       <li><i class="fas fa-tools"></i> Mantenimiento preventivo y correctivo</li>
       <li><i class="fas fa-headset"></i> Asesoría técnica personalizada</li>
     </ul>
   </section>
 
+  <!-- Sección Contacto -->
   <section class="seccion">
     <div class="titulo">Contáctanos</div>
     <p>¿Tienes dudas o quieres cotizar un servicio? ¡Estamos para ayudarte!</p>
     <a href="https://wa.me/524776120900" class="boton-contacto" target="_blank">Escríbenos por WhatsApp</a>
   </section>
 
+  <!-- Sección Visión y Meta -->
   <section class="seccion">
     <div class="titulo">Visión y Meta</div>
-    <p><strong>Visión:</strong> Ser la empresa líder en el mercado de drones, proporcionando soluciones innovadoras y accesibles para profesionales y entusiastas.</p>
-    <p><strong>Meta:</strong> Proporcionar drones de alta calidad y servicios de mantenimiento con un enfoque en la excelencia técnica.</p>
+    <p><strong>Visión:</strong> Ser la empresa líder en el mercado de drones, proporcionando soluciones innovadoras y accesibles para profesionales y entusiastas. Buscamos transformar la forma en que las personas interactúan con la tecnología aérea, ofreciendo productos de calidad, servicio excepcional y un compromiso constante con la innovación.</p>
+    <p><strong>Meta:</strong> Proporcionar drones de alta calidad y servicios de mantenimiento con un enfoque en la excelencia técnica y la satisfacción del cliente. Nuestro objetivo es expandir nuestro alcance, convirtiéndonos en el proveedor principal para quienes buscan soluciones aéreas de vanguardia.</p>
   </section>
 
+  <!-- Sección Redes Sociales -->
   <section class="contacto">
     <h3>¡Síguenos en nuestras redes sociales!</h3>
-    <a href="https://
+    <!-- Instagram -->
+    <a href="https://www.instagram.com/dronix_mex/" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+    </a>
+    <!-- Facebook -->
+    <a href="https://www.facebook.com/share/1A6NvFfBQo/?mibextid=wwXIfr" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
+    </a>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    &copy; 2025 Dronix. Todos los derechos reservados.
+  </footer>
+</body>
+
+</html>
