--- a/index.html
+++ b/index.html
@@ -5,38 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dronix - Venta y Mantenimiento de Drones</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@300&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
     /* Estilos generales */
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(to right, #1e293b, #0f172a);
+      background: linear-gradient(to right, #0f172a, #1e293b);
       color: white;
       scroll-behavior: smooth;
     }
 
-    /* Header */
-    header {
-      background-color: #0f172a;
-      padding: 40px;
-      text-align: center;
-      animation: fadeIn 2s ease-out;
-    }
-
-    header img {
-      width: 150px;
-    }
-
-    h1 {
-      font-family: 'Poppins', sans-serif;
-      font-size: 3em;
-      margin-top: 10px;
-      color: #f97316;
-    }
-
-    /* Animación del encabezado */
+    /* Animaciones */
     @keyframes fadeIn {
       from {
         opacity: 0;
@@ -47,29 +28,70 @@
       }
     }
 
+    @keyframes bounce {
+      0% {
+        transform: translateY(0);
+      }
+
+      50% {
+        transform: translateY(-15px);
+      }
+
+      100% {
+        transform: translateY(0);
+      }
+    }
+
+    /* Header */
+    header {
+      padding: 50px;
+      text-align: center;
+      animation: fadeIn 2s ease-out;
+    }
+
+    header img {
+      width: 180px;
+    }
+
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3.5em;
+      color: #f97316;
+      margin-top: 20px;
+      letter-spacing: 2px;
+      animation: bounce 2s infinite;
+    }
+
+    p {
+      font-size: 1.2em;
+    }
+
     /* Secciones */
     .seccion {
-      padding: 40px 20px;
-      max-width: 1000px;
+      padding: 50px 20px;
+      max-width: 1200px;
       margin: auto;
+      animation: fadeIn 2s ease-out;
     }
 
     .titulo {
       color: #f97316;
       font-family: 'Orbitron', sans-serif;
-      font-size: 2em;
-      margin-bottom: 10px;
+      font-size: 2.5em;
+      margin-bottom: 20px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
 
     /* Estilo para los botones */
     .boton-contacto {
       background-color: #f97316;
       border: none;
-      padding: 15px 30px;
+      padding: 18px 35px;
       color: white;
-      font-size: 1.1em;
+      font-size: 1.2em;
       cursor: pointer;
-      border-radius: 10px;
+      border-radius: 12px;
       text-decoration: none;
       transition: all 0.3s ease;
     }
@@ -86,26 +108,50 @@
       padding: 20px;
       font-size: 1em;
       color: #ccc;
-      margin-top: 40px;
+      margin-top: 50px;
     }
 
     /* Sección de Redes Sociales */
+    .contacto {
+      text-align: center;
+      margin-top: 50px;
+    }
+
     .contacto img {
-      width: 50px;
-      height: 50px;
-      margin: 0 10px;
+      width: 55px;
+      height: 55px;
+      margin: 0 20px;
       transition: all 0.3s ease;
     }
 
     .contacto img:hover {
-      transform: scale(1.2);
+      transform: scale(1.3);
     }
 
     .contacto h3 {
-      font-size: 1.5em;
+      font-size: 2em;
       color: #f97316;
+      margin-bottom: 30px;
+      font-family: 'Poppins', sans-serif;
     }
 
+    /* Estilo para listas y servicios */
+    ul {
+      font-size: 1.2em;
+      list-style-type: none;
+      padding-left: 0;
+    }
+
+    ul li {
+      margin: 15px 0;
+    }
+
+    ul li i {
+      color: #f97316;
+      margin-right: 10px;
+    }
+
+    /* Diseño responsivo */
     @media (max-width: 768px) {
       h1 {
         font-size: 2.5em;
@@ -117,6 +163,11 @@
 
       footer {
         font-size: 0.9em;
+      }
+
+      .contacto img {
+        width: 45px;
+        height: 45px;
       }
     }
   </style>
@@ -133,7 +184,7 @@
   <!-- Sección ¿Quiénes somos? -->
   <section class="seccion">
     <div class="titulo">¿Quiénes somos?</div>
-    <p>En Dronix nos especializamos en ofrecer drones de alta calidad, así como servicios profesionales de mantenimiento y reparación. Nuestra misión es llevar la tecnología aérea a otro nivel.</p>
+    <p>En Dronix nos especializamos en ofrecer drones de alta calidad, así como servicios profesionales de mantenimiento y reparación. Nuestra misión es llevar la tecnología aérea a otro nivel, ofreciendo innovación, confianza y accesibilidad para todos.</p>
   </section>
 
   <!-- Sección Servicios -->
