--- a/index.html
+++ b/index.html
@@ -151,6 +151,27 @@
       margin-right: 10px;
     }
 
+    /* Galería de imágenes */
+    .galeria {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 40px;
+    }
+
+    .galeria img {
+      width: 100%;
+      max-width: 250px;
+      height: auto;
+      border-radius: 10px;
+      transition: transform 0.3s ease;
+    }
+
+    .galeria img:hover {
+      transform: scale(1.05);
+    }
+
     /* Diseño responsivo */
     @media (max-width: 768px) {
       h1 {
@@ -168,6 +189,10 @@
       .contacto img {
         width: 45px;
         height: 45px;
+      }
+
+      .galeria img {
+        max-width: 200px;
       }
     }
   </style>
@@ -209,6 +234,20 @@
     <div class="titulo">Visión y Meta</div>
     <p><strong>Visión:</strong> Ser la empresa líder en el mercado de drones, proporcionando soluciones innovadoras y accesibles para profesionales y entusiastas. Buscamos transformar la forma en que las personas interactúan con la tecnología aérea, ofreciendo productos de calidad, servicio excepcional y un compromiso constante con la innovación.</p>
     <p><strong>Meta:</strong> Proporcionar drones de alta calidad y servicios de mantenimiento con un enfoque en la excelencia técnica y la satisfacción del cliente. Nuestro objetivo es expandir nuestro alcance, convirtiéndonos en el proveedor principal para quienes buscan soluciones aéreas de vanguardia.</p>
+  </section>
+
+  <!-- Sección de subir imágenes de drones -->
+  <section class="seccion">
+    <div class="titulo">Sube tus imágenes de drones</div>
+    <form action="#" method="POST" enctype="multipart/form-data">
+      <input type="file" name="drone-image" accept="image/*" required>
+      <button type="submit" class="boton-contacto">Subir Imagen</button>
+    </form>
+    <div class="galeria">
+      <img src="drone1.jpg" alt="Drone 1">
+      <img src="drone2.jpg" alt="Drone 2">
+      <img src="drone3.jpg" alt="Drone 3">
+    </div>
   </section>
 
   <!-- Sección Redes Sociales -->
