--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dronix - Venta y Mantenimiento de Drones</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@400&family=Poppins:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@300&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
     /* Estilos generales */
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(to right, #121212, #1a1a1a);
-      color: #f1f1f1;
+      background: linear-gradient(to right, #1a1a1a, #333333); /* Fondo futurista y elegante */
+      color: white;
       scroll-behavior: smooth;
     }
 
@@ -34,7 +34,7 @@
       }
 
       50% {
-        transform: translateY(-20px);
+        transform: translateY(-15px);
       }
 
       100% {
@@ -44,43 +44,40 @@
 
     /* Header */
     header {
-      padding: 70px 20px;
+      padding: 50px;
       text-align: center;
       animation: fadeIn 2s ease-out;
     }
 
     header img {
-      width: 200px;
-      margin-bottom: 20px;
+      width: 180px;
     }
 
     h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 4em;
-      color: #ff9f00;
-      margin-top: 10px;
-      letter-spacing: 3px;
+      font-size: 3.5em;
+      color: #f97316;
+      margin-top: 20px;
+      letter-spacing: 2px;
       animation: bounce 2s infinite;
     }
 
     p {
-      font-size: 1.4em;
-      color: #bbb;
-      line-height: 1.6;
+      font-size: 1.2em;
     }
 
     /* Secciones */
     .seccion {
       padding: 50px 20px;
-      max-width: 1100px;
+      max-width: 1200px;
       margin: auto;
       animation: fadeIn 2s ease-out;
     }
 
     .titulo {
-      color: #ff9f00;
+      color: #f97316;
       font-family: 'Orbitron', sans-serif;
-      font-size: 2.8em;
+      font-size: 2.5em;
       margin-bottom: 20px;
       text-transform: uppercase;
       letter-spacing: 1px;
@@ -88,29 +85,29 @@
 
     /* Estilo para los botones */
     .boton-contacto {
-      background-color: #ff9f00;
+      background-color: #f97316;
       border: none;
       padding: 18px 35px;
       color: white;
       font-size: 1.2em;
       cursor: pointer;
-      border-radius: 8px;
+      border-radius: 12px;
       text-decoration: none;
       transition: all 0.3s ease;
     }
 
     .boton-contacto:hover {
-      background-color: #e68900;
+      background-color: #ff5c00;
       transform: scale(1.05);
     }
 
     /* Estilo para el footer */
     footer {
-      background-color: #121212;
+      background-color: #1a1a1a;
       text-align: center;
       padding: 20px;
       font-size: 1em;
-      color: #bbb;
+      color: #ccc;
       margin-top: 50px;
     }
 
@@ -121,21 +118,19 @@
     }
 
     .contacto img {
-      width: 60px;
-      height: 60px;
+      width: 55px;
+      height: 55px;
       margin: 0 20px;
       transition: all 0.3s ease;
-      border-radius: 50%;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     }
 
     .contacto img:hover {
-      transform: scale(1.2);
+      transform: scale(1.3);
     }
 
     .contacto h3 {
-      font-size: 2.5em;
-      color: #ff9f00;
+      font-size: 2em;
+      color: #f97316;
       margin-bottom: 30px;
       font-family: 'Poppins', sans-serif;
     }
@@ -148,18 +143,18 @@
     }
 
     ul li {
-      margin: 20px 0;
+      margin: 15px 0;
     }
 
     ul li i {
-      color: #ff9f00;
-      margin-right: 15px;
+      color: #f97316;
+      margin-right: 10px;
     }
 
     /* Diseño responsivo */
     @media (max-width: 768px) {
       h1 {
-        font-size: 2.8em;
+        font-size: 2.5em;
       }
 
       .seccion {
@@ -184,8 +179,8 @@
     /* Para pantallas muy pequeñas */
     @media (max-width: 480px) {
       .contacto img {
-        width: 45px;
-        height: 45px;
+        width: 40px;
+        height: 40px;
       }
 
       .contacto h3 {
