--- a/index.html
+++ b/index.html
@@ -214,6 +214,17 @@
     </ul>
   </section>
 
+  <!-- Sección Lista de Precios -->
+  <section class="seccion">
+    <div class="titulo">Lista de Precios</div>
+    <ul>
+      <li><i class="fas fa-tag"></i> Dron Recreativo - $6,500 MXN</li>
+      <li><i class="fas fa-tag"></i> Mantenimiento Preventivo - $600 MXN</li>
+      <li><i class="fas fa-tag"></i> Mantenimiento Correctivo - Desde 1500 MXN</li>
+      <li><i class="fas fa-tag"></i> Asesoría Técnica - $800 MXN por sesión</li>
+    </ul>
+  </section>
+
   <!-- Sección Contacto -->
   <section class="seccion">
     <div class="titulo">Contáctanos</div>
