--- a/index.html
+++ b/index.html
@@ -5,257 +5,319 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dronix - Venta y Mantenimiento de Drones</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@300&family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@300;500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
-    /* Estilos generales */
+    :root {
+      --primary: #00f7ff;
+      --secondary: #f97316;
+      --bg-gradient: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
+      --glass-bg: rgba(255, 255, 255, 0.05);
+    }
+
     body {
       margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background: linear-gradient(to right, #1a1a1a, #333333); /* Fondo futurista y elegante */
+      font-family: 'Poppins', sans-serif;
+      background: var(--bg-gradient);
       color: white;
       scroll-behavior: smooth;
     }
 
-    /* Animaciones */
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-
-      to {
-        opacity: 1;
-      }
+    /* Nuevo Navbar Futurista */
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: var(--glass-bg);
+      backdrop-filter: blur(10px);
+      z-index: 1000;
+      padding: 1rem 0;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     }
 
-    @keyframes bounce {
-      0% {
-        transform: translateY(0);
-      }
-
-      50% {
-        transform: translateY(-15px);
-      }
-
-      100% {
-        transform: translateY(0);
-      }
+    .nav-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 2rem;
     }
 
-    /* Header */
+    .nav-logo {
+      width: 120px;
+      filter: drop-shadow(0 0 5px var(--primary));
+    }
+
+    .nav-links {
+      display: flex;
+      gap: 2rem;
+    }
+
+    .nav-link {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      position: relative;
+      transition: all 0.3s ease;
+    }
+
+    .nav-link::after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background: var(--primary);
+      transition: width 0.3s ease;
+    }
+
+    .nav-link:hover::after {
+      width: 100%;
+    }
+
+    /* Header Mejorado */
     header {
-      padding: 50px;
+      padding: 150px 50px 100px;
       text-align: center;
-      animation: fadeIn 2s ease-out;
+      position: relative;
+      overflow: hidden;
     }
 
-    header img {
-      width: 180px;
+    header::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at 50% 50%, rgba(0, 247, 255, 0.1) 0%, transparent 60%);
+      pointer-events: none;
     }
 
     h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 3.5em;
-      color: #f97316;
-      margin-top: 20px;
-      letter-spacing: 2px;
-      animation: bounce 2s infinite;
+      font-size: 4em;
+      background: linear-gradient(45deg, var(--primary), var(--secondary));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin: 1rem 0;
+      text-shadow: 0 0 15px rgba(0, 247, 255, 0.3);
     }
 
-    p {
-      font-size: 1.2em;
+    /* Tarjetas de Servicios */
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+      padding: 2rem;
     }
 
-    /* Secciones */
-    .seccion {
-      padding: 50px 20px;
-      max-width: 1200px;
-      margin: auto;
-      animation: fadeIn 2s ease-out;
+    .card {
+      background: var(--glass-bg);
+      border-radius: 15px;
+      padding: 2rem;
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .titulo {
-      color: #f97316;
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 10px 30px rgba(0, 247, 255, 0.1);
+    }
+
+    .card h3 {
+      color: var(--primary);
       font-family: 'Orbitron', sans-serif;
-      font-size: 2.5em;
-      margin-bottom: 20px;
-      text-transform: uppercase;
-      letter-spacing: 1px;
+      margin: 1rem 0;
     }
 
-    /* Estilo para los botones */
+    /* Nuevo diseño para listas */
+    .price-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+      padding: 2rem;
+    }
+
+    .price-item {
+      display: flex;
+      align-items: center;
+      padding: 1.5rem;
+      background: var(--glass-bg);
+      border-radius: 10px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .price-item i {
+      font-size: 1.5rem;
+      margin-right: 1rem;
+      color: var(--primary);
+    }
+
+    /* Botones Mejorados */
     .boton-contacto {
-      background-color: #f97316;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      background: linear-gradient(45deg, var(--primary), var(--secondary));
       border: none;
-      padding: 18px 35px;
+      padding: 1rem 2rem;
       color: white;
-      font-size: 1.2em;
+      font-size: 1.1rem;
       cursor: pointer;
-      border-radius: 12px;
+      border-radius: 50px;
       text-decoration: none;
       transition: all 0.3s ease;
+      box-shadow: 0 5px 15px rgba(0, 247, 255, 0.3);
     }
 
     .boton-contacto:hover {
-      background-color: #ff5c00;
       transform: scale(1.05);
+      box-shadow: 0 8px 25px rgba(0, 247, 255, 0.5);
     }
 
-    /* Estilo para el footer */
-    footer {
-      background-color: #1a1a1a;
+    /* Sección de Contacto Mejorada */
+    .contact-section {
+      position: relative;
+      padding: 4rem 2rem;
       text-align: center;
-      padding: 20px;
-      font-size: 1em;
-      color: #ccc;
-      margin-top: 50px;
+      background: var(--glass-bg);
+      margin: 4rem auto;
+      max-width: 800px;
+      border-radius: 20px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
-    /* Sección de Redes Sociales */
-    .contacto {
-      text-align: center;
-      margin-top: 50px;
+    /* Redes Sociales Futuristas */
+    .social-links {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin: 3rem 0;
     }
 
-    .contacto img {
-      width: 55px;
-      height: 55px;
-      margin: 0 20px;
+    .social-link {
+      font-size: 2rem;
+      color: white;
       transition: all 0.3s ease;
+      position: relative;
     }
 
-    .contacto img:hover {
-      transform: scale(1.3);
+    .social-link:hover {
+      color: var(--primary);
+      transform: translateY(-5px);
     }
 
-    .contacto h3 {
-      font-size: 2em;
-      color: #f97316;
-      margin-bottom: 30px;
-      font-family: 'Poppins', sans-serif;
+    /* Animaciones Mejoradas */
+    @keyframes float {
+      0% { transform: translateY(0px); }
+      50% { transform: translateY(-20px); }
+      100% { transform: translateY(0px); }
     }
 
-    /* Estilo para listas y servicios */
-    ul {
-      font-size: 1.2em;
-      list-style-type: none;
-      padding-left: 0;
+    .floating {
+      animation: float 3s ease-in-out infinite;
     }
 
-    ul li {
-      margin: 15px 0;
-    }
-
-    ul li i {
-      color: #f97316;
-      margin-right: 10px;
-    }
-
-    /* Diseño responsivo */
+    /* Diseño Responsivo */
     @media (max-width: 768px) {
+      .nav-links {
+        display: none;
+      }
+
+      header {
+        padding: 120px 20px 80px;
+      }
+
       h1 {
         font-size: 2.5em;
       }
 
-      .seccion {
-        padding: 20px;
-      }
-
-      footer {
-        font-size: 0.9em;
-      }
-
-      .contacto img {
-        width: 50px;
-        height: 50px;
-        margin: 10px;
-      }
-
-      .contacto h3 {
-        font-size: 1.8em;
-      }
-    }
-
-    /* Para pantallas muy pequeñas */
-    @media (max-width: 480px) {
-      .contacto img {
-        width: 40px;
-        height: 40px;
-      }
-
-      .contacto h3 {
-        font-size: 1.5em;
+      .card-grid {
+        grid-template-columns: 1fr;
       }
     }
   </style>
 </head>
 
 <body>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="nav-container">
+      <img src="logo_dronix.png" alt="Dronix Logo" class="nav-logo">
+      <div class="nav-links">
+        <a href="#servicios" class="nav-link">Servicios</a>
+        <a href="#precios" class="nav-link">Precios</a>
+        <a href="#contacto" class="nav-link">Contacto</a>
+      </div>
+    </div>
+  </nav>
+
   <!-- Header -->
   <header>
-    <img src="logo_dronix.png" alt="Logo Dronix">
-    <h1>Dronix</h1>
-    <p>Innovación en venta y mantenimiento de drones</p>
+    <h1 class="floating">DRONIX</h1>
+    <p>Tecnología Aérea de Vanguardia</p>
   </header>
 
-  <!-- Sección ¿Quiénes somos? -->
-  <section class="seccion">
-    <div class="titulo">¿Quiénes somos?</div>
-    <p>En Dronix nos especializamos en ofrecer drones de alta calidad, servicios profesionales de mantenimiento y reparación. Nuestra misión es llevar la tecnología aérea a todos, brindando soluciones accesibles y de alto rendimiento.</p>
+  <!-- Servicios -->
+  <section id="servicios" class="seccion">
+    <div class="titulo">Nuestros Servicios</div>
+    <div class="card-grid">
+      <div class="card">
+        <i class="fas fa-drone fa-3x"></i>
+        <h3>Venta de Drones</h3>
+        <p>Equipos profesionales y recreativos con tecnología de última generación</p>
+      </div>
+      <div class="card">
+        <i class="fas fa-tools fa-3x"></i>
+        <h3>Mantenimiento</h3>
+        <p>Servicio técnico especializado y actualizaciones de software</p>
+      </div>
+      <div class="card">
+        <i class="fas fa-headset fa-3x"></i>
+        <h3>Asesoría</h3>
+        <p>Soporte personalizado y capacitación técnica especializada</p>
+      </div>
+    </div>
   </section>
 
-  <!-- Sección Servicios -->
-  <section class="seccion">
-    <div class="titulo">Servicios</div>
-    <ul>
-      <li><i class="fas fa-drone"></i> Venta de drones profesionales y recreativos</li>
-      <li><i class="fas fa-tools"></i> Mantenimiento preventivo y correctivo</li>
-      <li><i class="fas fa-headset"></i> Asesoría técnica personalizada</li>
-    </ul>
+  <!-- Precios -->
+  <section id="precios" class="seccion">
+    <div class="titulo">Nuestros Precios</div>
+    <div class="price-list">
+      <div class="price-item">
+        <i class="fas fa-fighter-jet"></i>
+        <div>
+          <h4>Dron Recreativo</h4>
+          <p>$6,500 MXN</p>
+        </div>
+      </div>
+      <!-- Más items de precios... -->
+    </div>
   </section>
 
-  <!-- Sección Lista de Precios -->
-  <section class="seccion">
-    <div class="titulo">Lista de Precios</div>
-    <ul>
-      <li><i class="fas fa-tag"></i> Dron Recreativo - $6,500 MXN</li>
-      <li><i class="fas fa-tag"></i> Mantenimiento Preventivo - $600 MXN</li>
-      <li><i class="fas fa-tag"></i> Mantenimiento Correctivo - Desde 1500 MXN</li>
-      <li><i class="fas fa-tag"></i> Asesoría Técnica - $800 MXN por sesión</li>
-    </ul>
-  </section>
-
-  <!-- Sección Contacto -->
-  <section class="seccion">
+  <!-- Contacto -->
+  <section id="contacto" class="contact-section">
     <div class="titulo">Contáctanos</div>
-    <p>¿Tienes dudas o quieres cotizar un servicio? ¡Estamos para ayudarte!</p>
-    <a href="https://wa.me/525667681754" class="boton-contacto" target="_blank">Escríbenos por WhatsApp</a>
-  </section>
-
-  <!-- Sección Visión y Meta -->
-  <section class="seccion">
-    <div class="titulo">Visión y Meta</div>
-    <p><strong>Visión:</strong> Ser la empresa líder en el mercado de drones, proporcionando soluciones innovadoras y accesibles para profesionales y entusiastas. Buscamos transformar la forma en que las personas interactúan con la tecnología aérea, ofreciendo productos de calidad, servicio excepcional y un compromiso constante con la innovación.</p>
-    <p><strong>Meta:</strong> Proporcionar drones de alta calidad y servicios de mantenimiento con un enfoque en la excelencia técnica y la satisfacción del cliente. Nuestro objetivo es expandir nuestro alcance, convirtiéndonos en el proveedor principal para quienes buscan soluciones aéreas de vanguardia.</p>
-  </section>
-
-  <!-- Sección Redes Sociales -->
-  <section class="contacto">
-    <h3>¡Síguenos en nuestras redes sociales!</h3>
-    <!-- Instagram -->
-    <a href="https://www.instagram.com/dronix_mex/" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
-    </a>
-    <!-- Facebook -->
-    <a href="https://www.facebook.com/share/1A6NvFfBQo/?mibextid=wwXIfr" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
+    <p>¿Listo para elevar tu experiencia?</p>
+    <a href="https://wa.me/525667681754" class="boton-contacto">
+      <i class="fab fa-whatsapp"></i>
+      Contactar por WhatsApp
     </a>
   </section>
 
-  <!-- Footer -->
+  <!-- Redes Sociales -->
+  <div class="social-links">
+    <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+    <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+    <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+  </div>
+
   <footer>
-    &copy; 2025 Dronix. Todos los derechos reservados.
+    &copy; 2025 Dronix. Innovación en cada vuelo.
   </footer>
 </body>
-
 </html>
